--- a/00-E2-CS2B-FIA-September-2020/01-Exercise1.html
+++ b/00-E2-CS2B-FIA-September-2020/01-Exercise1.html
@@ -3,6 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
+    <meta name="author" content="Dragonfly Stats" />
     <script src="libs/header-attrs-2.7/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -12,226 +13,44 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Modelling Data with R
+### Dragonfly Stats
+### 2016/12/12
 
 ---
 
 
 
-Use the ‘MotorClaims’ data set (MotorClaims.csv) to answer the following questions:
+An actuary is investigating the asymptotic behaviour of the sample autocorrelation function for two time series models. 
 
 
-```r
-claims &lt;- read.csv("MotorClaims.csv")
-
-head(claims)
-```
-
-```
-##   Claims
-## 1  10037
-## 2  60153
-## 3  37849
-## 4  13097
-## 5  33947
-## 6  18984
-```
-
+(1. Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order moving average process with parameter β1=0.4, assigning the 
+simulated values to a vector called YMA.  
 
 ---
 
+(2. Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order autoregressive model 
+with parameter α1=0.45, assigning the simulated values to a vector called YAR. 
 
-
-```r
-summary(claims)
-```
-
-```
-##      Claims     
-##  Min.   : 1086  
-##  1st Qu.: 9914  
-##  Median :16310  
-##  Mean   :18673  
-##  3rd Qu.:24836  
-##  Max.   :62777
-```
-
-
-
-```r
-dim(claims)
-```
-
-```
-## [1] 100   1
-```
+---
+3.  Plot, on four separate graphs, the sample autocorrelation function (sample ACF) and sample partial autocorrelation function (sample PACF) for each of the two time series models, YMA and YAR, generated 
+in parts (1.  and (2. .   
 
 ---
 
-## Exercises
+(iv)Comment on the general features of the plots in part 3.  
 
-
-1. Fit Gamma distribution on the dataset provided by determining its scale and shape
-parameters. State clearly the distribution with the parameters.
-
-2. Simulate 1000 values from the distribution obtained in question (i) and print the first
-six values. (Set seed to 100) 
-
-3. Calculate the mean and variance of simulated values. 
-
-4. Obtain a QQ plot for the simulations of 1000 values and a normal distribution. 
-
-5. Add a line to the above plot to show the true position of normal distribution. 
-
-6. Comment on the shape of the distribution and how close it is to a normal distribution.
-
-
-
+ with reference to whether they are consistent with the theoretical behaviour of the corresponding functions for the true models. 
+ 
+ he acf() function in R can also provide a vector output of the sample ACF values, with component i giving the sample ACF at lag i – 1, provided that the plot argument of the function is set to ‘FALSE’. 
+ 
 ---
-
-## Solution 1:
-
-
-
-```r
-xbar = mean(claims$Claims)
-xbar
-```
-
-```
-## [1] 18672.76
-```
-
-
-```r
-stddev = sd(claims$Claims)
-variance = stddev ^ 2
-variance
-```
-
-```
-## [1] 161323921
-```
-
-
----
-
-
-
-```r
-lambda &lt;- xbar/variance
-lambda
-```
-
-```
-## [1] 0.000115747
-```
-
-
-```r
-alpha &lt;-xbar * lambda
-alpha
-```
-
-```
-## [1] 2.161316
-```
-
-
---- 
-
-`$$X ~ Gamma (2.16, 0.0001)$$`
-
----
-
-### Exercise 2
-
-
-
-```r
-set.seed(100)
-samples &lt;- rgamma(1000,alpha,lambda)
-head(samples,6)
-```
-
-```
-## [1]  9305.461  2125.292 25926.442 15685.099 18120.436  8605.442
-```
-
-
-
----
-
-
-### Exercise 3
-
-
-```r
-mean(samples)
-```
-
-```
-## [1] 18423.47
-```
-
-
-```r
-variance &lt;- sd(samples) ^ 2
-variance
-```
-
-```
-## [1] 153958637
-```
-
----
-
-### Exercise 4
-
-Normal Probability Plot (a.k.a QQ plots)
-
-
-```r
-qqnorm(samples)
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
-
-
----
-
-
-```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
-
-
----
-
-### Exercise 5
-
-
-```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
-
-qqline(samples,col="red")
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
-
----
-
-vi)
-Close to normal... (1 mark) in the middle values... (1 mark) .
-‘Banana-shaped’ indicates positively skewed... (1 mark) .
-
-
+  (v)Determine the numerical values for the sample ACF at lag 2, for each of the two time series models, YMA and YAR, generated in parts (1.  and (2. . [2] (
+  
+---  
+  
+  v1. Construct R code that  first sets a random number generator seed of 967; and thengenerates 1,000 random vectors (of length n = 200) for each of the twomodels in parts (1.  and (2. ; andassigns the values of the sample ACF at lag 2 for each random vector totwo vectors ACF2MA and ACF2AR (each of length 1,000).[8](v2. Determine the mean and variance of the two vectors, ACF2MA and ACF2AR, generated in part (v1. . [3] (vi2. Plot, on two separate graphs, the histograms of the two vectors, ACF2MA and ACF2AR, generated in part (v1. . [4] 
+(ix)Comment on the results in parts (v2.  and (vi2. , including whether they agree with the expected asymptotic behaviour. [9] [Total 40] 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
