--- a/00-D2/02-Part2-Survival.html
+++ b/00-D2/02-Part2-Survival.html
@@ -3,6 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
+    <meta name="author" content="Dragonfly Stats" />
     <script src="libs/header-attrs-2.7/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -12,224 +13,141 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Modelling Data with R
+### Dragonfly Stats
+### 2016/12/12
 
 ---
 
 
 
-Use the ‘MotorClaims’ data set (MotorClaims.csv) to answer the following questions:
-
 
 ```r
-claims &lt;- read.csv("MotorClaims.csv")
+library(magrittr)
 
-head(claims)
+options(repr.plot.width=8, repr.plot.height=5)
 ```
 
-```
-##   Claims
-## 1  10037
-## 2  60153
-## 3  37849
-## 4  13097
-## 5  33947
-## 6  18984
-```
+For the graphs, the value of x varies from 0 to 10.
+
+## Part (a)
+
+Draw the graph of hazard function for the gamma distribution with parameters `\(\alpha  = 0.75\)` and `\(\lambda  = 0.5\)`.
 
 
 ---
 
+The hazard function `\(h(x)\)` for a distribution is defined as the ratio between its probability density function and its survival function.
 
+Survival functions are most often used in reliability and related fields. The survival function is the probability that the variate takes a value greater than x.
 
-```r
-summary(claims)
-```
-
-```
-##      Claims     
-##  Min.   : 1086  
-##  1st Qu.: 9914  
-##  Median :16310  
-##  Mean   :18673  
-##  3rd Qu.:24836  
-##  Max.   :62777
-```
-
-
-
-```r
-dim(claims)
-```
-
-```
-## [1] 100   1
-```
+$$ S(x) = Pr[X gt x ] = 1 − F(x) $$
 
 ---
 
-## Exercises
-
-
-1. Fit Gamma distribution on the dataset provided by determining its scale and shape
-parameters. State clearly the distribution with the parameters.
-
-2. Simulate 1000 values from the distribution obtained in question (i) and print the first
-six values. (Set seed to 100) 
-
-3. Calculate the mean and variance of simulated values. 
-
-4. Obtain a QQ plot for the simulations of 1000 values and a normal distribution. 
-
-5. Add a line to the above plot to show the true position of normal distribution. 
-
-6. Comment on the shape of the distribution and how close it is to a normal distribution.
-
-
-
----
-
-## Solution 1:
+#### Probaility Density Function
 
 
 
 ```r
-xbar = mean(claims$Claims)
-xbar
+pdf &lt;-function(x) {dgamma(x,0.75,0.3)}
+
+plot.function(pdf,0,10)
 ```
 
-```
-## [1] 18672.76
-```
-
-
-```r
-stddev = sd(claims$Claims)
-variance = stddev ^ 2
-variance
-```
-
-```
-## [1] 161323921
-```
-
-
----
-
-
-
-```r
-lambda &lt;- xbar/variance
-lambda
-```
-
-```
-## [1] 0.000115747
-```
-
-
-```r
-alpha &lt;-xbar * lambda
-alpha
-```
-
-```
-## [1] 2.161316
-```
+![](02-Part2-Survival_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
 
 
 --- 
 
-`$$X ~ Gamma (2.16, 0.0001)$$`
 
----
-
-### Exercise 2
+#### Survival Function
 
 
 
 ```r
-set.seed(100)
-samples &lt;- rgamma(1000,alpha,lambda)
-head(samples,6)
+sf &lt;-function(x){ 1-pgamma(x,0.75,0.3) }
+
+plot.function(sf,0,10)
+title("Survival Function")
 ```
 
-```
-## [1]  9305.461  2125.292 25926.442 15685.099 18120.436  8605.442
-```
-
+![](02-Part2-Survival_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
 
 
 ---
 
 
-### Exercise 3
+#### Hazard Function
 
-
-```r
-mean(samples)
-```
-
-```
-## [1] 18423.47
-```
 
 
 ```r
-variance &lt;- sd(samples) ^ 2
-variance
+h1&lt;-function(x) {dgamma(x,0.75,0.3)/(1-pgamma(x,0.75,0.3))}
+
+plot.function(h1,0,10)
+title("Hazard Function 1")
 ```
 
-```
-## [1] 153958637
-```
-
----
-
-### Exercise 4
-
-Normal Probability Plot (a.k.a QQ plots)
-
-
-```r
-qqnorm(samples)
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+![](02-Part2-Survival_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
 
 
 ---
 
 
+## Part (b)
+
+Draw the graph of hazard function for the gamma distribution with parameters `\(\alpha  = 1\)` and `\(\lambda  = 0.3\)`. 
+
+
+
 ```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
+h2&lt;-function(x) {dgamma(x,1,0.3)/(1-pgamma(x,1,0.3))}
+
+plot.function(h2,0,10)
 ```
 
-![](F1_Questions1_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
+![](02-Part2-Survival_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
 
 
 ---
 
-### Exercise 5
+
+## Part (c)
+
+Draw the graph of hazard function for the gamma distribution with parameters `\(\alpha  = 1.5\)` and `\(\lambda  = 0.3\)`. 
+
 
 
 ```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
+h3&lt;-function(x) {dgamma(x,1.5,0.3)/(1-pgamma(x,1.5,0.3))}
 
-qqline(samples,col="red")
+plot.function(h3,0,10)
 ```
 
-![](F1_Questions1_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
+![](02-Part2-Survival_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+
 
 ---
 
-vi)
-Close to normal... (1 mark) in the middle values... (1 mark) .
-‘Banana-shaped’ indicates positively skewed... (1 mark) .
+
+## Part (d)
+
+Comment on the thickness of the tails of the distribution of ***Part (b)*** with the tails of ***Part (a)*** and
+***Part (c)***.
+
+
+* If `\(\alpha  &amp;lt; 1\)`, it is a decreasing function of x and thus indicating a heavier tail than the exponential
+distribution. 
+
+
+* If `\(\alpha  &amp;gt; 1\)`, it is a increasing function of x and thus indicating a lighter tail than the exponential
+distribution. 
+
+
+* If `\(\alpha  = 1\)` then the function is relatively constant in most part of the projection.
+
+
 
 
     </textarea>
