--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions3.html
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions3.html
@@ -3,6 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
+    <meta name="author" content="Dragonfly Stats" />
     <script src="libs/header-attrs-2.7/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -12,226 +13,243 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Modelling Data with R
+### Dragonfly Stats
+### 2016/12/12
 
 ---
 
 
+#### Exercise 
 
-Use the ‘MotorClaims’ data set (MotorClaims.csv) to answer the following questions:
-
-
-```r
-claims &lt;- read.csv("MotorClaims.csv")
-
-head(claims)
-```
-
-```
-##   Claims
-## 1  10037
-## 2  60153
-## 3  37849
-## 4  13097
-## 5  33947
-## 6  18984
-```
-
-
+Data is provided for ‘BMIClaims’ of 150 policyholders and corresponding claim count.
+(BMIClaims.csv)
 ---
 
+Another slide.
 
 
 ```r
-summary(claims)
+BMI &lt;- read.csv("CS1B_BMIClaims.csv")
+
+head(BMI)
 ```
 
 ```
-##      Claims     
-##  Min.   : 1086  
-##  1st Qu.: 9914  
-##  Median :16310  
-##  Mean   :18673  
-##  3rd Qu.:24836  
-##  Max.   :62777
-```
-
-
-
-```r
-dim(claims)
-```
-
-```
-## [1] 100   1
+##   BMI ClaimCount
+## 1  31          0
+## 2  33          1
+## 3  17          0
+## 4  25          0
+## 5  27          0
+## 6  35          0
 ```
 
 ---
 
-## Exercises
+## Exercise 1
+
+Obtain 95% confidence interval for the standard deviation of BMI (using ``qchisq()``). 
 
 
-1. Fit Gamma distribution on the dataset provided by determining its scale and shape
-parameters. State clearly the distribution with the parameters.
+```r
+var(BMI$BMI)
+```
 
-2. Simulate 1000 values from the distribution obtained in question (i) and print the first
-six values. (Set seed to 100) 
-
-3. Calculate the mean and variance of simulated values. 
-
-4. Obtain a QQ plot for the simulations of 1000 values and a normal distribution. 
-
-5. Add a line to the above plot to show the true position of normal distribution. 
-
-6. Comment on the shape of the distribution and how close it is to a normal distribution.
-
-
-
----
-
-## Solution 1:
+```
+## [1] 43.44076
+```
 
 
 
 ```r
-xbar = mean(claims$Claims)
-xbar
+sd(BMI$BMI)
 ```
 
 ```
-## [1] 18672.76
-```
-
-
-```r
-stddev = sd(claims$Claims)
-variance = stddev ^ 2
-variance
-```
-
-```
-## [1] 161323921
+## [1] 6.590961
 ```
 
 
 ---
 
 
-
-```r
-lambda &lt;- xbar/variance
-lambda
-```
-
-```
-## [1] 0.000115747
-```
+## Inspecting the Dataframe
 
 
 ```r
-alpha &lt;-xbar * lambda
-alpha
+nrow(BMI)
 ```
 
 ```
-## [1] 2.161316
-```
-
-
---- 
-
-`$$X ~ Gamma (2.16, 0.0001)$$`
-
----
-
-### Exercise 2
-
-
-
-```r
-set.seed(100)
-samples &lt;- rgamma(1000,alpha,lambda)
-head(samples,6)
-```
-
-```
-## [1]  9305.461  2125.292 25926.442 15685.099 18120.436  8605.442
-```
-
-
-
----
-
-
-### Exercise 3
-
-
-```r
-mean(samples)
-```
-
-```
-## [1] 18423.47
-```
-
-
-```r
-variance &lt;- sd(samples) ^ 2
-variance
-```
-
-```
-## [1] 153958637
+## [1] 150
 ```
 
 ---
 
-### Exercise 4
-
-Normal Probability Plot (a.k.a QQ plots)
+#### Variance Testing
 
 
 ```r
-qqnorm(samples)
+var.test(BMI$BMI,BMI$BMI)
 ```
 
-![](F1_Questions1_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+```
+## 
+## 	F test to compare two variances
+## 
+## data:  BMI$BMI and BMI$BMI
+## F = 1, num df = 149, denom df = 149, p-value = 1
+## alternative hypothesis: true ratio of variances is not equal to 1
+## 95 percent confidence interval:
+##  0.7244337 1.3803885
+## sample estimates:
+## ratio of variances 
+##                  1
+```
 
+---
+
+#### Exercise 2
+
+ii) Further test the standard deviation of BMI to be equal to 4 by obtaining p value. State
+your conclusion of the test. (6)
+
+iii)
+iii)
+iv)
 
 ---
 
 
-```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-12-1.png)&lt;!-- --&gt;
-
+If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
+interval for proportion of obese people and comment on the likelihood if more than
+20 pc are obese.
 
 ---
 
-### Exercise 5
+## Exercise 3
 
-
-```r
-qqnorm(samples,
-       pch = 16,
-       col = "blue")
-
-qqline(samples,col="red")
-```
-
-![](F1_Questions1_files/figure-html/unnamed-chunk-13-1.png)&lt;!-- --&gt;
+Claim frequency can be calculated as claim count divided by number of policyholders.
+Test whether claim frequency is different between obese and others.
 
 ---
 
-vi)
-Close to normal... (1 mark) in the middle values... (1 mark) .
-‘Banana-shaped’ indicates positively skewed... (1 mark) .
+## Exercise 4
+
+Q. 4)
+
+If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
+interval for proportion of obese people and comment on the likelihood if more than
+20 pc are obese.
+
+---
+
+Claim frequency can be calculated as claim count divided by number of policyholders.
+Test whether claim frequency is different between obese and others.
+
+Solution 3:
+i)
+&gt; BMI &lt;- read.csv("BMIClaims.csv")
+&gt; n &lt;- length(BMI$BMI)
+&gt; alpha &lt;- 0.05
+
+...
+
+---
+
+&gt; sqrt(c((n-1)*var(BMI$BMI)/qchisq(1-alpha/2,df=n-1),(n-1)*var(BMI$BMI)/qchisq(alpha/2
+,df=n-1)))
+[2]
+[1] 5.920028 7.434763
+[2]
+[6]
+
+&gt; sigma &lt;- 4
+&gt; statistic &lt;- (n-1)*var(BMI$BMI)/sigma^2
+&gt; statistic
+[1] 404.5421
+&gt; qchisq(alpha/2,n-1)
+[1] 117.098
+&gt; qchisq(alpha/2,n-1,lower=FALSE)
+[1] 184.687
+&gt; 2*(pchisq((n-1)*var(BMI$BMI)/sigma^2,df=n-1,lower.tail=FALSE))
+[1] 3.564503e-25
+[1]
+---
+Since p-value is less than 5%, there is sufficient evidence to reject the hypothesis,
+i.e. the standard deviation of BMI is not equal to 4.
+[2]
+
+---
+
+iii)
+&gt; x &lt;- nrow(BMI[BMI$BMI&gt;30,])
+&gt; binom.test(x,n,conf.level = 0.99)
+
+---
+
+[2]
+Exact binomial test
+data: x and n
+number of successes = 10, number of trials = 150, p-value &lt; 2.2e-16
+alternative hypothesis: true probability of success is not equal to 0.5
+99 percent confidence interval:
+0.02522882 0.13728337
+sample estimates:
+probability of success
+0.06666667
+
+---
+
+Since 99% CI for p doesn’t contain p=0.2
+it is unlikely that the proportion of obese policyholders is more than 20%.. ..
+
+---
+
+#### Exercise 4
 
 
+```r
+table(BMI$BMI&gt;30,BMI$ClaimCount)
+```
+
+```
+##        
+##           0   1
+##   FALSE 133   7
+##   TRUE    7   3
+```
+0
+FALSE 133
+TRUE
+7
+1
+7
+3
+&gt; y &lt;- c(3,7)
+&gt; m &lt;- c(10,140)
+&gt; poisson.test(y,m)
+
+---
+
+[1]
+Comparison of Poisson rates
+data: y time base: m
+count1 = 3, expected count1 = 0.66667, p-value = 0.02493
+alternative hypothesis: true rate ratio is not equal to 1
+95 percent confidence interval:
+1.001171 26.282304
+sample estimates:
+rate ratio
+
+---
+
+Since p-value is less than 5% i.e. 2.5%, there is sufficient evidence to reject the hy
+pothesis, i.e. Claim frequency is different between obese and others.
+(Alternatively, can use prop.test)
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
