--- a/00-C1/01-Part1.html
+++ b/00-C1/01-Part1.html
@@ -3,20 +3,39 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="01-Part1_files/header-attrs-2.7/header-attrs.js"></script>
-    <link href="01-Part1_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="01-Part1_files/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Introduction to R for Actuarial Students
 
 ---
 
 
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 1
+---
+
+
+
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+&lt;/style&gt;
 
 In a very small empirical study a sample from a random variable `\(X\)` is observed. 
 The data can be entered into R using the following code:
@@ -31,7 +50,7 @@ x &lt;- c(0.22, 0.38, 1.28, 0.54, 0.56, 1.36,
 
 ---
 
-\subsection*{Exercise 1} 
+### Exercise 1
 Estimate the expected value of `\(X\)`.
 
 
@@ -44,16 +63,13 @@ mean(x)
 ## [1] 0.5738889
 ```
 
-`\begin{verbatim}
-0.573888
-\end{verbatim}`
 
 
 ---
 
-Exercise 2
-============================
-Calculate a 95\% confidence interval for the expected value of `\(X\)`, assuming that `\(X\)` is Normally distributed.
+### Exercise 2
+
+Calculate a 95% confidence interval for the expected value of `\(X\)`, assuming that `\(X\)` is Normally distributed.
 
 
 ```r
@@ -73,26 +89,10 @@ t.test(x, conf=0.95)
 ## mean of x 
 ## 0.5738889
 ```
-`\begin{verbatim}
-	One Sample t-test
-
-data:  x
-
-t = 8.2805, df = 17, p-value = 2.276e-07
-alternative hypothesis: true mean is not equal to 0
-
-95 percent confidence interval:
- 0.4276654 0.7201123
-
-sample estimates:
-mean of x 
-0.5738889 
-
-\end{verbatim}`
 
 ---
 
-\textbf{Shapiro-Wilk normality test}
+#### Shapiro-Wilk normality test
 
 
 ```r
@@ -116,14 +116,12 @@ qqnorm(x, cex=1.5, pch=18, col="black" )
 qqline(x ,lwd=2,col="red")
 ```
 
-![](01-Part1_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
-
-\includegraphics[scale=0.45]{00-C1/images/00-C1-Q1-qqnorm.png}
+![](01-Part1_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
 
 ---
 
-Tidyverse
-==========================
+#### Tidyverse
+
 
 
 ```r
@@ -131,21 +129,25 @@ Tidyverse
 
 library(magrittr)
 library(broom)
+```
 
+
+
+```r
 t.test(x, conf=0.95) %&gt;% tidy()
 ```
 
 ```
 ## # A tibble: 1 x 8
-##   estimate statistic   p.value parameter conf.low conf.high method   alternative
-##      &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;     &lt;dbl&gt; &lt;chr&gt;    &lt;chr&gt;      
-## 1    0.574      8.28   2.28e-7        17    0.428     0.720 One Sam~ two.sided
+##   estimate statistic     p.value parameter conf.low conf.high method alternative
+##      &lt;dbl&gt;     &lt;dbl&gt;       &lt;dbl&gt;     &lt;dbl&gt;    &lt;dbl&gt;     &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt;      
+## 1    0.574      8.28 0.000000228        17    0.428     0.720 One S~ two.sided
 ```
 
 ---
 
-Exercise 3
-============================
+### Exercise 3
+
 
 Construct a confidence interval for the expected value of `\(X\)` using the bootstrap
 method with 10,000 bootstrap replications.
@@ -178,33 +180,96 @@ method with 10,000 bootstrap replications.
 ---
 
 
-&gt; sample(1:4,replace =TRUE)
-[1] 1 1 4 1
-&gt;
-&gt; sample(1:5,replace =TRUE)
-[1] 5 3 1 5 4
-&gt;
-&gt; sample(1:6,replace =TRUE)
-[1] 4 2 1 2 2 4
+```r
+sample(1:4, 3, replace =TRUE)
+```
 
+```
+## [1] 1 3 2
+```
+
+
+```r
+sample(1:5, 3, replace =TRUE)
+```
+
+```
+## [1] 2 3 5
+```
+
+
+```r
+sample(1:6, 3, replace =TRUE)
+```
+
+```
+## [1] 5 3 3
+```
+---
+
+
+---
+
+
+```r
+sample(1:4,  replace =TRUE)
+```
+
+```
+## [1] 3 4 1 4
+```
+
+
+```r
+sample(1:5,  replace =TRUE)
+```
+
+```
+## [1] 1 3 1 4 2
+```
+
+
+```r
+sample(1:6, replace =TRUE)
+```
+
+```
+## [1] 1 1 3 2 1 4
+```
+
+---
+
+### ***replicate()***
+
+
+```r
+replicate(5, mean(sample(x,replace =TRUE)))
+```
+
+```
+## [1] 0.5733333 0.7311111 0.6016667 0.5916667 0.6538889
+```
 
 
 
 ```r
-replicate(10, mean(sample(x,replace =TRUE)))
+replicate(5, mean(sample(x,replace =TRUE)))
 ```
 
 ```
-##  [1] 0.5966667 0.5488889 0.5583333 0.5444444 0.4683333 0.6066667 0.5805556
-##  [8] 0.5066667 0.5733333 0.6111111
+## [1] 0.6400000 0.7822222 0.5577778 0.5927778 0.6550000
 ```
 
 
-`\begin{verbatim}
- [1] 0.5927778 0.4955556 0.5144444 0.5444444 0.6272222
- [6] 0.5577778 0.5438889 0.4916667 0.6233333 0.6266667
-\end{verbatim}`
 
+```r
+replicate(5, mean(sample(x,replace =TRUE)))
+```
+
+```
+## [1] 0.5505556 0.4777778 0.7311111 0.6583333 0.7000000
+```
+---
 
 
 
@@ -217,39 +282,38 @@ quantile(y,prob=c(0.025,0.975))
 
 ```
 ##      2.5%     97.5% 
-## 0.4583333 0.7222222
+## 0.4583333 0.7194444
 ```
 
-
-`\begin{verbatim}
- 2.5% 97.5% 
-0.4544444 0.7222222 
-\end{verbatim}`
 
 ---
 
 
-Exercise  4
-=============================
+### Exercise  4
+
 
 Comment on the differences between the confidence intervals in exercises 2 and 3.
 
 
 * The CIs are almost identical with the CI in exercise 3 being narrower. 
+&lt;p&gt;
 * The reason might be that the distribution of `\(X\)` is not normal, and therefore the
 distribution of the mean is not normal for the small sample size we have in this
 question. 
-* 
+&lt;p&gt;
 
 
-The bootstrap method provides a good approximation of the distribution of the mean
+* The bootstrap method provides a good approximation of the distribution of the mean
 independently of the type of distribution.
 
 ---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script>var slideshow = remark.create();
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
 });
