--- a/00-C1/04-Exercise4.html
+++ b/00-C1/04-Exercise4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.7/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,16 +12,33 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Introduction to R for Actuarial Students
 
 ---
 
 
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 4 - Regression Analysis
+---
 
 
-```r
-library(magrittr)
-```
+
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+&lt;/style&gt;
+
+
+
 
 A recent study suggests that the maximum heart rate of a person, related to age in
 years, is given by the equation:
@@ -31,7 +48,7 @@ $$ \mbox{Max Rate} = 220 – \mbox{Age}$$
 Suppose this is to be empirically proven and 15 people of varying ages are tested for
 their maximum heart rate. 
 
-
+---
 
 The following data are collected:
 
@@ -43,8 +60,8 @@ The following data are collected:
 The data can be entered into R using the following commands:
 
 &lt;pre&gt;&lt;code&gt;
-x &amp;lt;- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
-y &amp;lt;- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
+x &lt;- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
+y &lt;- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
 &lt;/code&gt;&lt;/pre&gt;
 
 ---
@@ -53,35 +70,23 @@ y &amp;lt;- c(202,186,187,180,156,169,174,172,153,199,193,174, 198,183,178)
 
 Plot the fitted line for the regression of Max Rate on Age.
 
-
-
-
-```r
+&lt;pre&gt;&lt;code&gt;
 x &lt;- c(18,23,25,35,65,54,34,56,72,19,23,42,18,39,37)
 
 y &lt;- c(202,186,187,180,156,169,174,172,153,199,193,174,198,183,178)
 
-plot(x,y)
-```
+plot(x,y, pch=18,col="red",cex=2)
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+### Scatterplot
 
 ![](04-Exercise4_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
 
+
 ---
-![png](output_4_0.png)
 
-
-
-
-```r
-plot(x,y,pch=18)
-```
-
-![](04-Exercise4_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
-
-
-![png](output_5_0.png)
-
---
+### Regression model
 
 
 ```r
@@ -106,32 +111,23 @@ lm.result
 ##    210.0485      -0.7977
 ```
 
+---
 
-* 
-* Call:
-* lm(formula = y ~ x)
-* 
-* Coefficients:
-* (Intercept) x  
-*    210.0485*   -0.7977  
-
-
-
-
-
-```r
+&lt;pre&gt;&lt;code&gt;
 # make a plot
-plot(x,y,pch=18)
+plot(x,y,pch=18,cex=2,col="blue")
 
 # plot the regression line
-abline(lm(y ~ x)) 
-```
+abline(lm(y ~ x), col="red") 
 
-![](04-Exercise4_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+![](04-Exercise4_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
 
 
-![png](output_8_0.png)
-
+---
 
 
 
@@ -160,29 +156,40 @@ summary(lm.result)
 ## F-statistic:   130 on 1 and 13 DF,  p-value: 3.848e-08
 ```
 
-
-* 
-* Call:
-* lm(formula = y ~ x)
-* 
-* Residuals:
-* * Min*   1Q  Median*   3Q*  Max 
-* -8.9258 -2.5383  0.3879  3.1867  6.6242 
-* 
-* Coefficients:
- *  Estimate Std. Error t value Pr(&gt;|t|)* 
-* (Intercept) 210.04846* 2.86694   73.27  &lt; 2e-16 ***
-* x -0.79773* 0.06996  -11.40 3.85e-08 ***
-* ---
-* Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-* 
-* Residual standard error: 4.578 on 13 degrees of freedom
-* Multiple R-squared:  0.9091,	Adjusted R-squared:  0.9021 
-* F-statistic:   130 on 1 and 13 DF,  p-value: 3.848e-08
-
+---
 
 
 Max heart rate reduces as age increases. The fit of the model seems good.
+
+---
+
+
+
+```r
+coef(lm.result)
+```
+
+```
+## (Intercept)           x 
+## 210.0484584  -0.7977266
+```
+
+
+
+```r
+confint(lm.result)
+```
+
+```
+##                  2.5 %      97.5 %
+## (Intercept) 203.854813 216.2421034
+## x            -0.948872  -0.6465811
+```
+
+
+---
+
+
 
 ## Exercise 2
 
@@ -209,13 +216,13 @@ confint(lm.result) %&gt;% round(2)
 
 ## Exercise 3
 
-Calculate the p-value of a hypothesis test for this suggestion, by creating a suitable test statistic.
+Calculate the p-value of a hypothesis test for this suggestion, by creating a suitable test statistic.
 
 
 * Can do a test to see if the slope of -1 is correct. 
 
 
-* Let `\(H_0\)` be that `\(\beta = -1\)`, and `\(H_A\)` be that $\beta \neq -1 $. 
+* Let `\(H_0\)` be that `\(\beta = -1\)`, and `\(H_A\)` be that `\(\beta \neq -1\)`. 
 
 
 * Then we can create the test statistic and the p-value as follows:
@@ -236,42 +243,6 @@ es %&gt;% round(3)
 ##     12     13     14     15 
 ## -2.544  2.311  4.063 -2.533
 ```
-
-
-&lt;dl class="dl-horizontal"&gt;
-	&lt;dt&gt;1&lt;/dt&gt;
-		&lt;dd&gt;6.311&lt;/dd&gt;
-	&lt;dt&gt;2&lt;/dt&gt;
-		&lt;dd&gt;-5.701&lt;/dd&gt;
-	&lt;dt&gt;3&lt;/dt&gt;
-		&lt;dd&gt;-3.105&lt;/dd&gt;
-	&lt;dt&gt;4&lt;/dt&gt;
-		&lt;dd&gt;-2.128&lt;/dd&gt;
-	&lt;dt&gt;5&lt;/dt&gt;
-		&lt;dd&gt;-2.196&lt;/dd&gt;
-	&lt;dt&gt;6&lt;/dt&gt;
-		&lt;dd&gt;2.029&lt;/dd&gt;
-	&lt;dt&gt;7&lt;/dt&gt;
-		&lt;dd&gt;-8.926&lt;/dd&gt;
-	&lt;dt&gt;8&lt;/dt&gt;
-		&lt;dd&gt;6.624&lt;/dd&gt;
-	&lt;dt&gt;9&lt;/dt&gt;
-		&lt;dd&gt;0.388&lt;/dd&gt;
-	&lt;dt&gt;10&lt;/dt&gt;
-		&lt;dd&gt;4.108&lt;/dd&gt;
-	&lt;dt&gt;11&lt;/dt&gt;
-		&lt;dd&gt;1.299&lt;/dd&gt;
-	&lt;dt&gt;12&lt;/dt&gt;
-		&lt;dd&gt;-2.544&lt;/dd&gt;
-	&lt;dt&gt;13&lt;/dt&gt;
-		&lt;dd&gt;2.311&lt;/dd&gt;
-	&lt;dt&gt;14&lt;/dt&gt;
-		&lt;dd&gt;4.063&lt;/dd&gt;
-	&lt;dt&gt;15&lt;/dt&gt;
-		&lt;dd&gt;-2.533&lt;/dd&gt;
-&lt;/dl&gt;
-
-
 
 
 
@@ -295,20 +266,56 @@ n
 ```
 
 
--0.798
+---
 
+### Residual Standard Error
 
+Under the assumption that the population error term has a constant variance, the mean square error (MSE) of the regression is the estimate of that variance, and is given by:
 
-15
+`$${\displaystyle {\hat {\sigma }}_{\varepsilon }^{2}={\frac {SSR}{n-2}}.\,}$$`
 
-
+The residual standard error is the square root of the MSE.
 
 
 ```r
+#calculate residual standard error
 s  &lt;-  sqrt( sum( es^2 ) / (n-2) )
-SE &lt;-  s/sqrt(sum((x-mean(x))^2))
+s
 ```
 
+```
+## [1] 4.577799
+```
+
+
+```r
+sqrt(deviance(lm.result)/df.residual(lm.result))
+```
+
+```
+## [1] 4.577799
+```
+---
+The standard errors of the parameter estimates are given by
+
+`$${\displaystyle {\hat {\sigma }}_{\beta _{1}}={\hat {\sigma }}_{\varepsilon }{\sqrt {\frac {1}{\sum (x_{i}-{\bar {x}})^{2}}}}}$$`
+
+`$${\displaystyle {\hat {\sigma }}_{\beta _{0}}={\hat {\sigma }}_{\varepsilon }{\sqrt {{\frac {1}{n}}+{\frac {{\bar {x}}^{2}}{\sum (x_{i}-{\bar {x}})^{2}}}}}={\hat {\sigma }}_{\beta _{1}}{\sqrt {\frac {\sum x_{i}^{2}}{n}}}.}$$`
+
+
+```r
+SE &lt;-  s/sqrt(sum((x-mean(x))^2))
+SE
+```
+
+```
+## [1] 0.06996281
+```
+
+
+---
+
+### Test Statistic
 
 
 ```r
@@ -336,10 +343,11 @@ pt(t,13,lower.tail=FALSE)
 ```
 
 
-0.00631015669476853
 
 ---
 
+
+### P-value
 
 
 The p-value is twice this as the problem is two-sided,
@@ -359,7 +367,7 @@ The p-value is twice this as the problem is two-sided,
 ---
 
 ## Exercise 4
-Comment on the researcher’s suggestion, using your answer to part (iii).
+Comment on the researcher’s suggestion, using your answer to part 3.
 
 
 
@@ -367,6 +375,9 @@ Comment on the researcher’s suggestion, using your answer to part (iii).
 The null hypothesis is rejected at the 5% level of significance. The slope may not be
 equal to -1 for these data. (Which is the slope predicted by the original formula 220 -
 Age.)
+
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
