--- a/00-C2-CS2B-FIA-Spring-2019/Exercise1.html
+++ b/00-C2-CS2B-FIA-Spring-2019/Exercise1.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.7/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -18,9 +18,8 @@ class: center, middle, inverse, title-slide
 
 
 
-\section{Introduction}
 
-Data
+### Data
 Before answering this question, the data file must be generated in R using the following code:
 
 
@@ -33,9 +32,18 @@ set.seed(12345);
 y = arima.sim( list(order = c(1,1,0), ar = 0.7), n = 300)
 ```
 
+---
 
 Plot the time series giving appropriate labels for each axis and paste the chart into your answer.
 
+
+&lt;pre&gt;&lt;code&gt;
+ts.plot( y, 
+    xlab = "Time", 
+    ylab = "Simulated Values from an ARIMA(1,1,0) Time Series")
+&lt;/code&gt;&lt;/pre&gt;
+
+---
 
 
 ```r
@@ -46,7 +54,7 @@ ts.plot( y,
 
 ![](Exercise1_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
 
-----
+---
 
 
 ```r
@@ -79,28 +87,43 @@ plot(x, y,
 ![](Exercise1_files/figure-html/unnamed-chunk-4-1.png)&lt;!-- --&gt;
 
 
-
+---
 
 (b) Comment on the general features of your chart.
 
-%
+---
 
-Exercise 2}
+Exercise 2
 (a) Determine the best least squares linear fit, adding it to your chart.
 
 (b) Explain whether this least squares linear trend can be removed such that a zero mean stationary distribution is appropriate for the residuals.
 
+
+---
+
+
+```r
 x = 1:301
 leastsquaresfit = lm(y~x)
+```
+
+---
+
+```r
 leastsquaresfit$coefficients
-(Intercept)
-35.3816076916281
-x
-0.251593150412161
+```
+
+```
+## (Intercept)           x 
+##  35.3816077   0.2515932
+```
+
 (ii) (a)
 ​
 Intercept: 16.4405647
-Slope: -0.2436929 [11⁄2]
+Slope: -0.2436929 
+
+---
 abline(leastsquaresfit)
 OR:
 lines(leastsquaresfit$fitted.values) [11⁄2]
@@ -139,14 +162,14 @@ acf(y, xlab = "Lag", ylab = "ACF of Simulated Values
 from an ARIMA(1,1,0) Time Series", main = "ACF")
 ```
 
-![](Exercise1_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+![](Exercise1_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
 
 ```r
 pacf(y, xlab = "Lag", ylab = "Partial ACF of Simulated
 Values from an ARIMA(1,1,0) Time Series", main = "PACF")   
 ```
 
-![](Exercise1_files/figure-html/unnamed-chunk-5-2.png)&lt;!-- --&gt;
+![](Exercise1_files/figure-html/unnamed-chunk-7-2.png)&lt;!-- --&gt;
 
 
 (iv)
@@ -174,6 +197,9 @@ There is perhaps an initial upwards trend...
 [7, Max. 4]
 ​
 ​
+ 
+
+---
  
 (iii)(b)
 Despite the PACF showing no significance past lag 2 which could indicate
@@ -211,7 +237,7 @@ library(forecast)
 tsdisplay(diff(y))  
 ```
 
-![](Exercise1_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+![](Exercise1_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
 
 
 
@@ -224,7 +250,7 @@ acf(diff(y))
 pacf(diff(y))
 ```
 
-![](Exercise1_files/figure-html/unnamed-chunk-7-1.png)&lt;!-- --&gt;
+![](Exercise1_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
 
 
 
@@ -395,7 +421,7 @@ second part of (v)(b).
  
 ​
 
-\end{document}`
+\end{document}
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
